--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>coranavirus</title>
+    <title>coranavirus2023</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- <link rel="stylesheet" type="text/css" href="css/all.css"> -->
 	<link rel="stylesheet" href="css/all.min.css">
